# observe

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  example.py  main.py  otel-collector-config.yaml  package.json  pyproject.toml  schema.sql
ai/: agent.py
apps/: docker-compose.yaml
apps/collector/: otel-collector-config.yaml
apps/dashboard/: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/dashboard/.ruler/: bts.md  ruler.toml
apps/dashboard/observe/: bts.jsonc
apps/docs/: package.json
apps/server/: .pre-commit-config.yaml  Dockerfile  database.py  main.py  models.py  pyproject.toml  utils.py
apps/server/db/: connection.py  schema.sql
apps/server/src/: main.py  models.py  utils.py
apps/server/src/db/: connection.py  schema.sql
backend/: database.py  main.py  models.py
bench_tests/: db_load_test.py  extreme_load_test.py
infra/docker/: docker-compose.yaml
ingestor/: database.py  main.py  models.py
interface/.next/server/: server-reference-manifest.json
interface/src/components/: JsonCode.tsx  ThemeSwitcher.tsx
seed-app/: main.py
ui/: INTEGRATION_PLAN.md  next.config.ts  package.json  pnpm-lock.yaml
ui/app/: layout.tsx  page.tsx
ui/components/: CopyButton.tsx  JsonCode.tsx  StatCard.tsx  ThemeToggle.tsx
ui/components/spans/: AIAgentView.tsx  AdaptiveSpanView.tsx  DatabaseSpanView.tsx  ExternalAPIView.tsx  FunctionModelView.tsx  HTTPRequestView.tsx  LLMChatView.tsx  LogMessageView.tsx  SpanRenderer.tsx  TokenUsageBadge.tsx
ui/src/app/: layout.tsx  siteConfig.ts
ui/src/components/: AISuggestion.tsx  CopyButton.tsx  (+6 more)
(+37 files in other folders)
