[project]
name = "observe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "logfire[fastapi]>=4.3.5",
    "pydantic>=2.11.7",
    "pydantic-ai[logfire]>=0.7.4",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
